bug squash

--- a/public_html/assets/styles/layouts/_home.scss
+++ b/public_html/assets/styles/layouts/_home.scss
@@ -87,6 +87,10 @@
       }
     }
     .twitter_feed {
+      @media(max-width:769px){
+        margin-top: 25px;
+      }
+          margin-top: 25px;
       a {
         color: #55ACEE;
         &:hover {
